--- a/fp/vm/Cargo.toml
+++ b/fp/vm/Cargo.toml
@@ -1,16 +1,8 @@
-[workspace]
-members = [
-    "fp/fp_utils",
-    "fp/compiler",
-    "fp/vm"
-]
-
 [package]
-name = "fpig"
+name = "vm"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-compiler = { path = "fp/compiler" }
